--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -7,6 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
+A collection of Machine Learning projects from undergrad.
 
 {% for post in site.portfolio reversed %}
   {% include archive-single.html %}
